# PortfolioPerformanceDashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  Reload_docker  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
Portfolios/: portefeuille_20250727_165659.json
jules-scratch/verification/: page_source.html  verify_theme_toggle.py
src/: a.py  ai_analyzer.py  app.py  b.py  calculations.py  data_manager.py  main.py  portfolio_performance_dashbord.ipynb  test_new_metrics.py  test_utils.py  ui_components.py  utils.py
