[project]
name = "portfolio-performance-dashboard"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
  "E", "F",        # pycodestyle/pyflakes
  "I",              # isort
  "B",              # flake8-bugbear
]
ignore = [
  "E501",  # line length handled visually
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true

[[tool.mypy.overrides]]
module = "dateutil.relativedelta"
ignore_missing_imports = true

[tool.ruff.lint.isort]
known-first-party = ["src"]
